// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App/> component should render correctly 1`] = `
<div
  className="app"
  data-theme="test-theme"
>
  <div
    className="appContent"
  >
    <Header />
    <Landing />
    <CookieDisclaimer />
    <Sections />
  </div>
</div>
`;

exports[`<App/> component when the theme is dark should render correctly 1`] = `
<div
  className="app app__dark"
  data-theme="DARK_THEME"
>
  <div
    className="appContent appContent__dark"
  >
    <Header />
    <Landing />
    <CookieDisclaimer />
    <Sections />
  </div>
</div>
`;
